# usb-vhci

./: INSTALL  Makefile.am  Makefile.include  README  configure.ac
Usb/: AlternateSetting.cs  AlternateSetting_Interfaces.cs  AssemblyInfo.cs.in  BidirectionalEndpoint.cs  BulkEndpoint.cs  BulkUrb.cs  ClassCodeTriple.cs  CollectionModifiedEventArgs.cs  ConfigurationDescriptor.cs  ConfigurationDescriptor_Interfaces.cs  ContainerDescriptor.cs  ControlEndpoint.cs  ControlUrb.cs  CustomDescriptor.cs  DataRate.cs  Descriptor.cs  DeviceDescriptor.cs  DeviceDescriptor_Interfaces.cs  DeviceDisconnectedException.cs  DeviceState.cs  Endianness.cs  Endpoint.cs  EndpointDirection.cs  EndpointType.cs  IEndpointParent.cs  IUsbDevice.cs  IValidable.cs  Interface.cs  Interface_Interfaces.cs  InterruptEndpoint.cs  InterruptUrb.cs  IsochronousEndpoint.cs  IsochronousPacket.cs  IsochronousUrb.cs  Makefile.am  RegularDescriptor.cs  RegularDescriptor_CustomDescriptorCollection.cs  RegularDescriptor_TailByteCollection.cs  SetupRecipient.cs  SetupType.cs  (+9 more)
Usb.Class.MassStorage/: AssemblyInfo.cs.in  CommandBlockStatus.cs  CommandBlockWrapper.cs  CommandBlockWrapperFlags.cs  CommandStatusWrapper.cs  DataTransferDirection.cs  Makefile.am  usb.class.massstorage.pc.in
Usb.Class.MassStorage/doc/de/src/: index.xml  ns-Usb.Class.MassStorage.xml
Usb.Class.MassStorage/doc/de/src/Usb.Class.MassStorage/: CommandBlockStatus.xml  CommandBlockWrapper.xml  CommandBlockWrapperFlags.xml  CommandStatusWrapper.xml  DataTransferDirection.xml
Usb.Emulation/: AssemblyInfo.cs.in  Makefile.am  StorageUsbDevice.cs  UsbDeviceBase.cs  usb.emulation.pc.in
Usb.Emulation/doc/de/src/: index.xml  ns-Usb.Emulation.xml
Usb.Emulation/doc/de/src/Usb.Emulation/: StorageUsbDevice.xml  UsbDeviceBase.xml
Usb.Filter/: AssemblyInfo.cs.in  FilterDeviceBase.cs  IFilterDevice.cs  LoggingFilterDevice.cs  Makefile.am  NoOpFilterDevice.cs  usb.filter.pc.in
Usb.Filter/doc/de/src/: index.xml  ns-Usb.Filter.xml
Usb.Filter/doc/de/src/Usb.Filter/: FilterDeviceBase.xml  IFilterDevice.xml  LoggingFilterDevice.xml  NoOpFilterDevice.xml
Usb.UsbFS/: AssemblyInfo.cs.in  DeviceFile.cs  Ioctl.cs  Makefile.am  UsbDevice.cs  usb.usbfs.pc.in
Usb.UsbFS/Enumeration/: Device.cs  Enumerator.cs  Hub.cs  Hub_Interfaces.cs  RootHub.cs
Usb.UsbFS/doc/de/src/: index.xml  ns-Usb.UsbFS.Enumeration.xml  ns-Usb.UsbFS.xml
Usb.UsbFS/doc/de/src/Usb.UsbFS/: DeviceFile.xml  Ioctl+pollfd.xml  Ioctl+usbdevfs_bulktransfer.xml  Ioctl+usbdevfs_bulktransfer_ptr.xml  Ioctl+usbdevfs_connectinfo.xml  Ioctl+usbdevfs_ctrltransfer.xml  Ioctl+usbdevfs_ctrltransfer_ptr.xml  Ioctl+usbdevfs_disconnectsignal.xml  Ioctl+usbdevfs_getdriver.xml  Ioctl+usbdevfs_hub_portinfo.xml  Ioctl+usbdevfs_ioctl.xml  Ioctl+usbdevfs_iso_packet_desc.xml  Ioctl+usbdevfs_setinterface.xml  Ioctl+usbdevfs_urb.xml  Ioctl.xml  UsbDevice.xml
Usb.UsbFS/doc/de/src/Usb.UsbFS.Enumeration/: Device.xml  Enumerator.xml  Hub.xml  RootHub.xml
Usb/Enumeration/: Device.cs  DeviceComparer.cs  DeviceComparisonFlags.cs  DeviceStringFormat.cs  IDevice.cs  IEnumerator.cs  IHub.cs  StatefullEnumerator.cs  StatefullEnumerator_Device.cs  StatefullEnumerator_Hub.cs  StatefullEnumerator_Hub_Interfaces.cs  StatefullEnumerator_RootHub.cs
Usb/Linux/: errno.cs
Usb/Windows/: USBD_STATUS.cs
Usb/doc/de/src/: index.xml  ns-Usb.Enumeration.xml  ns-Usb.Linux.xml  ns-Usb.Windows.xml  ns-Usb.xml
Usb/doc/de/src/Usb/: AlternateSetting.xml  BidirectionalEndpoint.xml  BulkEndpoint.xml  BulkUrb.xml  ClassCodeTriple.xml  CollectionModifiedEventArgs`1.xml  ConfigurationDescriptor.xml  ContainerDescriptor.xml  ControlEndpoint.xml  ControlUrb.xml  CustomDescriptor.xml  DataRate.xml  Descriptor.xml  DeviceDescriptor.xml  DeviceDisconnectedException.xml  DeviceState.xml  Endianness.xml  Endpoint.xml  EndpointDirection.xml  EndpointType.xml  IEndpointParent.xml  IUsbDevice.xml  IValidable.xml  Interface.xml  InterruptEndpoint.xml  InterruptUrb.xml  IsochronousEndpoint.xml  IsochronousPacket.xml  IsochronousUrb.xml  RegularDescriptor+TailByteCollection.xml  RegularDescriptor.xml  SetupRecipient.xml  SetupType.xml  StringDescriptor.xml  SynchronizationType.xml  UnidirectionalEndpoint.xml  Urb.xml  UrbFlags.xml  UrbStatus.xml  UsageType.xml  (+1 more)
Usb/doc/de/src/Usb.Enumeration/: Device.xml  DeviceComparer.xml  DeviceComparisonFlags.xml  DeviceStringFormat.xml  IDevice.xml  IEnumerator.xml  IHub.xml  StatefullEnumerator+Device.xml  StatefullEnumerator+Hub.xml  StatefullEnumerator+RootHub.xml  StatefullEnumerator.xml
Usb/doc/de/src/Usb.Linux/: errno.xml
Usb/doc/de/src/Usb.Windows/: USBD_STATUS.xml
Vhci/: AssemblyInfo.cs.in  CancelUrbWork.cs  Hcd.cs  LocalHcd.cs  Makefile.am  PortStat.cs  PortStatChangeFlags.cs  PortStatFlags.cs  PortStatStatusFlags.cs  PortStatWork.cs  PortStatWorkTriggerFlags.cs  ProcessUrbWork.cs  Work.cs  vhci.pc.in
Vhci/Forwarders/: IForwarder.cs  SingleDeviceForwarder.cs
Vhci/Linux/: Ioctl.cs  LocalHcd.cs
Vhci/Windows/: Ioctl.cs  LocalHcd.cs
Vhci/doc/de/src/: index.xml  ns-Vhci.Forwarders.xml  ns-Vhci.Linux.xml  ns-Vhci.Windows.xml  ns-Vhci.xml
Vhci/doc/de/src/Vhci.Forwarders/: IForwarder.xml  SingleDeviceForwarder.xml
Vhci/doc/de/src/Vhci.Linux/: Ioctl+vhci_ioc_giveback.xml  Ioctl+vhci_ioc_iso_packet_data.xml  Ioctl+vhci_ioc_iso_packet_giveback.xml  Ioctl+vhci_ioc_port_stat.xml  Ioctl+vhci_ioc_register.xml  Ioctl+vhci_ioc_setup_packet.xml  Ioctl+vhci_ioc_urb.xml  Ioctl+vhci_ioc_urb_data.xml  Ioctl+vhci_ioc_work.xml  Ioctl+vhci_ioc_work_union.xml  Ioctl.xml  LocalHcd.xml
Vhci/doc/de/src/Vhci.Windows/: Ioctl+SP_DEVICE_INTERFACE_DATA.xml  Ioctl+SP_DEVICE_INTERFACE_DETAIL_DATA.xml  Ioctl+VIRTUSB_GIVEBACK.xml  Ioctl+VIRTUSB_URB.xml  (+10 more)
VhciGui/: .gitignore  AssemblyInfo.cs.in  DescriptorNode.cs  DeviceNode.cs  MainForm.Designer.cs  MainForm.cs  Makefile.am  Node.cs  Program.cs  vhcigui.in
VhciServer/: .gitignore  AssemblyInfo.cs.in  Main.cs  Makefile.am  vhciserver.in
examples/HelloUsb/: HelloUsb.cs  Makefile.am
examples/InvertMouse2/: InvertMouse2.cs  Makefile.am
examples/ScanBus/: Makefile.am  ScanBus.cs
(+35 files in other folders)
