
EXTRA_DIST = 

COMPILE_TARGET = library
ASSEMBLY_COMPILER = CSC
CSC_ARGS = $(CSC_NO_UNSAFE) $(CSC_STRONGNAME)

all: $(ASSEMBLY) $(LINUX_PKGCONFIG) $(ASSEMBLY_WRAPPER) $(DOC_TARGETS)

FILES =  \
	AssemblyInfo.cs \
	CommandBlockStatus.cs \
	CommandBlockWrapper.cs \
	CommandBlockWrapperFlags.cs \
	CommandStatusWrapper.cs \
	DataTransferDirection.cs 

DATA_FILES = 

RESOURCES = 

EXTRAS = 

REFERENCES = System

PROJECT_REFERENCES = 

DLL_REFERENCES = 

CLEANFILES = 

include $(top_srcdir)/Makefile.include
