
EXTRA_DIST = 

COMPILE_TARGET = library
ASSEMBLY_COMPILER = CSC
CSC_ARGS = $(CSC_NO_UNSAFE) $(CSC_STRONGNAME)

all: $(ASSEMBLY) $(LINUX_PKGCONFIG) $(ASSEMBLY_WRAPPER) $(DOC_TARGETS)

FILES =  \
	AlternateSetting.cs \
	AlternateSetting_Interfaces.cs \
	AssemblyInfo.cs \
	BidirectionalEndpoint.cs \
	BulkEndpoint.cs \
	BulkUrb.cs \
	ClassCodeTriple.cs \
	CollectionModifiedEventArgs.cs \
	ConfigurationDescriptor.cs \
	ConfigurationDescriptor_Interfaces.cs \
	ContainerDescriptor.cs \
	ControlEndpoint.cs \
	ControlUrb.cs \
	CustomDescriptor.cs \
	DataRate.cs \
	Descriptor.cs \
	DeviceDescriptor.cs \
	DeviceDescriptor_Interfaces.cs \
	DeviceDisconnectedException.cs \
	DeviceState.cs \
	Endianness.cs \
	Endpoint.cs \
	EndpointDirection.cs \
	EndpointType.cs \
	Enumeration/Device.cs \
	Enumeration/DeviceComparer.cs \
	Enumeration/DeviceComparisonFlags.cs \
	Enumeration/DeviceStringFormat.cs \
	Enumeration/IDevice.cs \
	Enumeration/IEnumerator.cs \
	Enumeration/IHub.cs \
	Enumeration/StatefullEnumerator.cs \
	Enumeration/StatefullEnumerator_Device.cs \
	Enumeration/StatefullEnumerator_Hub.cs \
	Enumeration/StatefullEnumerator_Hub_Interfaces.cs \
	Enumeration/StatefullEnumerator_RootHub.cs \
	IEndpointParent.cs \
	Interface.cs \
	Interface_Interfaces.cs \
	InterruptEndpoint.cs \
	InterruptUrb.cs \
	IsochronousEndpoint.cs \
	IsochronousPacket.cs \
	IsochronousUrb.cs \
	IUsbDevice.cs \
	IValidable.cs \
	Linux/errno.cs \
	RegularDescriptor.cs \
	RegularDescriptor_CustomDescriptorCollection.cs \
	RegularDescriptor_TailByteCollection.cs \
	SetupRecipient.cs \
	SetupType.cs \
	StringDescriptor.cs \
	SynchronizationType.cs \
	UnidirectionalEndpoint.cs \
	Urb.cs \
	UrbFlags.cs \
	UrbStatus.cs \
	UsageType.cs \
	ValidationMode.cs \
	Windows/USBD_STATUS.cs 

DATA_FILES = 

RESOURCES = 

EXTRAS = 

REFERENCES = System

PROJECT_REFERENCES = 

DLL_REFERENCES = 

CLEANFILES = 

include $(top_srcdir)/Makefile.include
