
EXTRA_DIST = 

COMPILE_TARGET = console
ASSEMBLY_COMPILER = CSC
CSC_ARGS = $(CSC_NO_UNSAFE)

all: $(ASSEMBLY)
NO_INST_ASSEMBLY = yes

FILES = InvertMouse2.cs 

DATA_FILES = 

RESOURCES = 

EXTRAS = 

REFERENCES = System

PROJECT_REFERENCES =  \
	../../bin/Usb.dll \
	../../bin/Usb.UsbFS.dll \
	../../bin/Vhci.dll

DLL_REFERENCES = 

CLEANFILES = 

include $(top_srcdir)/Makefile.include
